# objLoader

./: CMakeLists.txt  README.md  ThreadPool.h  main.cpp  reuslt.md  tiny_obj_loader.h
